--- a/server/.env
+++ b/server/.env
@@ -6,10 +6,11 @@ DB_USER=postgres
 DB_PASSWORD=navas
 DB_NAME=postgres
 
-DB_URL = postgresql://postgres:navas@db.fgwyiiepgctphkjhcizp.supabase.co:5432/postgres
+# DB_URL = postgresql://postgres:navas@db.fgwyiiepgctphkjhcizp.supabase.co:5432/postgres
 
 OPENAI_API_KEY=AIzaSyANN8y6VrAtBHez5uaOOoNtp70GmDuRJSw
 
 # AIzaSyANN8y6VrAtBHez5uaOOoNtp70GmDuRJSw
 
-DATABASE_URL=postgresql://neondb_owner:npg_JbXBcvnr7qx9@ep-flat-silence-a1quyn8p.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=
+postgresql://neondb_owner:npg_JbXBcvnr7qx9@ep-flat-silence-a1quyn8p.ap-southeast-1.aws.neon.tech/neondbsslmode=require
